// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`spinner (isCI = true) start renders frames at interval 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
]
`;

exports[`spinner (isCI = true) start renders message 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
]
`;

exports[`spinner (isCI = true) start renders timer when indicator is "timer" 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
]
`;

exports[`spinner (isCI = true) stop renders submit symbol and stops spinner 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
  
"◇  
"
,
  "\x1B[?25h",
]
`;

exports[`spinner (isCI = true) stop renders cancel symbol if code = 1 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
  
"■  
"
,
  "\x1B[?25h",
]
`;

exports[`spinner (isCI = true) stop renders error symbol if code > 1 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
  
"▲  
"
,
  "\x1B[?25h",
]
`;

exports[`spinner (isCI = true) stop renders message 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
  
"◇  foo
"
,
  "\x1B[?25h",
]
`;

exports[`spinner (isCI = true) stop renders message without removing dots 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
  
"◇  foo.
"
,
  "\x1B[?25h",
]
`;

exports[`spinner (isCI = true) message sets message for next frame 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
]
`;

exports[`spinner (isCI = true) message sets message for next frame 2`] = `
[
  "\x1B[?25l",
  
"│
"
,
  
"◇  
"
,
  "\x1B[?25h",
]
`;

exports[`spinner (isCI = true) indicator customization custom frames 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
  
"◇  
"
,
  "\x1B[?25h",
]
`;

exports[`spinner (isCI = true) indicator customization custom delay 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
  
"◇  
"
,
  "\x1B[?25h",
]
`;

exports[`spinner (isCI = true) process exit handling uses default cancel message 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
  
"■  Canceled
"
,
  "\x1B[?25h",
]
`;

exports[`spinner (isCI = true) process exit handling uses custom cancel message when provided directly 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
  
"■  Custom cancel message
"
,
  "\x1B[?25h",
]
`;

exports[`spinner (isCI = true) process exit handling uses custom error message when provided directly 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
  
"▲  Custom error message
"
,
  "\x1B[?25h",
]
`;

exports[`spinner (isCI = true) process exit handling uses global custom cancel message from settings 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
  
"■  Global cancel message
"
,
  "\x1B[?25h",
]
`;

exports[`spinner (isCI = true) process exit handling uses global custom error message from settings 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
  
"▲  Global error message
"
,
  "\x1B[?25h",
]
`;

exports[`spinner (isCI = true) process exit handling prioritizes error option over global setting 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
  
"▲  Spinner error message
"
,
  "\x1B[?25h",
]
`;

exports[`spinner (isCI = true) process exit handling prioritizes cancel option over global setting 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
  
"■  Spinner cancel message
"
,
  "\x1B[?25h",
]
`;

exports[`spinner (isCI = false) start renders frames at interval 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
]
`;

exports[`spinner (isCI = false) start renders message 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
]
`;

exports[`spinner (isCI = false) start renders timer when indicator is "timer" 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
]
`;

exports[`spinner (isCI = false) stop renders submit symbol and stops spinner 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
  
"◇  
"
,
  "\x1B[?25h",
]
`;

exports[`spinner (isCI = false) stop renders cancel symbol if code = 1 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
  
"■  
"
,
  "\x1B[?25h",
]
`;

exports[`spinner (isCI = false) stop renders error symbol if code > 1 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
  
"▲  
"
,
  "\x1B[?25h",
]
`;

exports[`spinner (isCI = false) stop renders message 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
  
"◇  foo
"
,
  "\x1B[?25h",
]
`;

exports[`spinner (isCI = false) stop renders message without removing dots 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
  
"◇  foo.
"
,
  "\x1B[?25h",
]
`;

exports[`spinner (isCI = false) message sets message for next frame 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
]
`;

exports[`spinner (isCI = false) message sets message for next frame 2`] = `
[
  "\x1B[?25l",
  
"│
"
,
  
"◇  
"
,
  "\x1B[?25h",
]
`;

exports[`spinner (isCI = false) indicator customization custom frames 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
  
"◇  
"
,
  "\x1B[?25h",
]
`;

exports[`spinner (isCI = false) indicator customization custom delay 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
  
"◇  
"
,
  "\x1B[?25h",
]
`;

exports[`spinner (isCI = false) process exit handling uses default cancel message 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
  
"■  Canceled
"
,
  "\x1B[?25h",
]
`;

exports[`spinner (isCI = false) process exit handling uses custom cancel message when provided directly 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
  
"■  Custom cancel message
"
,
  "\x1B[?25h",
]
`;

exports[`spinner (isCI = false) process exit handling uses custom error message when provided directly 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
  
"▲  Custom error message
"
,
  "\x1B[?25h",
]
`;

exports[`spinner (isCI = false) process exit handling uses global custom cancel message from settings 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
  
"■  Global cancel message
"
,
  "\x1B[?25h",
]
`;

exports[`spinner (isCI = false) process exit handling uses global custom error message from settings 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
  
"▲  Global error message
"
,
  "\x1B[?25h",
]
`;

exports[`spinner (isCI = false) process exit handling prioritizes error option over global setting 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
  
"▲  Spinner error message
"
,
  "\x1B[?25h",
]
`;

exports[`spinner (isCI = false) process exit handling prioritizes cancel option over global setting 1`] = `
[
  "\x1B[?25l",
  
"│
"
,
  
"■  Spinner cancel message
"
,
  "\x1B[?25h",
]
`;
